Fixing bxslider alignment

--- a/css/style.css
+++ b/css/style.css
@@ -271,10 +271,12 @@ ul.special_bullet li:before {
   overflow: hidden;
   } 
   
-#wrapper_bx {
-  width 800px
+.wrapper_bx {
+  background-color: #dde3ed;
+  width 95%;
   margin: 0px auto;
-  text-align: center;
+  padding-left: 3%;
+  padding-right: 
   }
 
 .bx-wrapper {
@@ -284,54 +286,68 @@ ul.special_bullet li:before {
   }
 
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  transform: translate (-50%, -35%);
   font-size: 45px;
   font-family: arial;
+  margin: 0;
+  padding:0;
+  color: white;
 }
 
 .footer1 {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  transform: translate (-50%, -35%);
   font-size: 45px;
   font-family: arial;
+  margin: 0;
+  padding:0;
   color: #082557;
   }
   
-.slides li{
-  height: 100px;
-  width: 800px:
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-position: center center;
-  text-align: center;
-  display: table;   
+.footer2{
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate (-50%, -35%);
+  font-size: 45px;
+  font-family: arial;
+  margin: 0;
+  padding:0;
+  color: white;
+}
+  
+.slides {
+  background-color: #dde3ed;
+}
+
+.slides img {
   margin: 0 auto;
-  }
+  max-width: 100%;
+  overflow: hidden;
+  vertical-align: middile;
+}
+
 
 .slides li h2{
-  position: absolute;
+  overflow: hidden;
   top: 5%;
   color: #dde3ed;
   font-family: arial;
   font-size: 45px;
-  margin: 0;
-  padding: 0;
   text-align: center;
   }
   
-#wrapper_bx ul li h1{
-  position: absolute;
+.slides li h1{
+  overflow: hidden;
   top: 5%;
   color: #082557;
   font-family: arial;
   font-size: 45px;
-  margin: 0;
-  padding: 0;
   text-align: center;
   }
   
@@ -342,8 +358,6 @@ ul.special_bullet li:before {
   margin: 30px auto; 
   }
   
-#map {
-  height: 75%;
-  }
   
 
+<div style="float: left; list-style: none; position: relative; width: 638px;" class="bx-clone" aria-hidden="true"><img src="images/mountains.jpg" alt="Canadaian Rockies Mountain" title="Canadian Rockies Mountains."><div class="bx-caption"><span>Canadian Rockies Mountains.</span></div></div>
